--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#">Contact</a>
                 </div>
                 <div class="middle-area">
-                    <img src="src/css/abakuslogo.png" alt="logo">
+                    <img src="src/img/abakuslogo.png" alt="logo">
                 </div>
                 <div class="right-area">
                     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <img class="main-bg" src="src/css/main-background.png" alt="main-bg">
+        <img class="main-bg" src="src/img/main-background.png" alt="main-bg">
         <div class="container">
             <div class="content">
                 <h1>We make Your Dream Website</h1>
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="content">
                 <div class="left-area">
-                    <img src="src/css/ABOUT.png" alt="about">
+                    <img src="src/img/ABOUT.png" alt="about">
                 </div>
                 <div class="right-area">
                     <h2>About</h2>
@@ -90,16 +90,16 @@
                 <h3>Selected Works</h3>
                 <div class="grid two-column two-row">
                     <div class="item">
-                        <img src="src/css/1.png" alt="">
+                        <img src="src/img/1.png" alt="">
                     </div>
                     <div class="item">
-                        <img src="src/css/1.png" alt="">
+                        <img src="src/img/1.png" alt="">
                     </div>
                     <div class="item">
-                        <img src="src/css/1.png" alt="">
+                        <img src="src/img/1.png" alt="">
                     </div>
                     <div class="item">
-                        <img src="src/css/1.png" alt="">
+                        <img src="src/img/1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -166,7 +166,7 @@
             <div class="content">
                 <div class="grid six-column">
                     <div class="item two">
-                        <img src="src/css/abakuslogo.png" alt="footer-logo">
+                        <img src="src/img/abakuslogo.png" alt="footer-logo">
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                     <div class="item">
